--- a/UserMgtApp/WebContent/home.html
+++ b/UserMgtApp/WebContent/home.html
@@ -7,7 +7,8 @@
 <body>
 
 Welcome to Online Git repository project
-<a href="registration.html">Register</a>
+<a href="registration.html">Register</a><br/>
+<a href="login.html">Login</a>
 
 </body>
 </html>
