user name type changed

--- a/UserMgtApp/WebContent/login.html
+++ b/UserMgtApp/WebContent/login.html
@@ -7,7 +7,7 @@
 <body>
 
 <form action="login" method="post">
- UserName : <input type="text" name="uname"><br/>
+ UserName : <input type="password" name="uname"><br/>
  Password : <input type="password" name="pswrd"><br/>
  <input type="submit" value="Login">
 </form>
